--- a/career.html
+++ b/career.html
@@ -28,7 +28,7 @@
       }
 
       .hero-bg {
-        background: url("career.webp") center center/cover no-repeat;
+        background: url("download.jpg") center center/cover no-repeat;
         position: absolute;
         top: 0;
         left: 0;
@@ -1098,7 +1098,7 @@
             <ul class="footer-links-list">
               <li><a href="#">About Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="careers.html">Careers</a></li>
+              <li><a href="career.html">Careers</a></li>
             </ul>
           </div>
           <div class="footer-links-col">
