--- a/contact.html
+++ b/contact.html
@@ -1012,7 +1012,7 @@
             <ul class="footer-links-list">
               <li><a href="about-us.html">About Us</a></li>
               <li><a href="#">Contact Us</a></li>
-              <li><a href="careers.html">Careers</a></li>
+              <li><a href="career.html">Careers</a></li>
             </ul>
           </div>
           <div class="footer-links-col">
