--- a/about-us.html
+++ b/about-us.html
@@ -1033,7 +1033,7 @@
             <ul class="footer-links-list">
               <li><a href="#">About Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="careers.html">Careers</a></li>
+              <li><a href="career.html">Careers</a></li>
             </ul>
           </div>
           <div class="footer-links-col">
