--- a/musicians-singers.html
+++ b/musicians-singers.html
@@ -1097,9 +1097,9 @@
     <footer class="caa-footer">
       <div class="caa-footer-content desktop-footer">
         <div class="footer-main-row">
-          <div class="footer-logo-col">
-            <div class="caa-footer-logo">CAA</div>
-          </div>
+          <!-- <div class="footer-logo-col">
+          </div> -->
+          <div class="caa-footer-logo" style="margin-bottom: 1rem">CAA</div>
           <div class="footer-links-col">
             <ul class="footer-links-list">
               <li><a href="#">About Us</a></li>
