--- a/career.html
+++ b/career.html
@@ -320,6 +320,9 @@
         font-family: "PFDinTextPro-Regular", Arial, sans-serif;
         margin-top: 0;
         border: none;
+        max-height: 70vh;
+        min-height: 200px;
+        overflow-y: auto;
       }
       .caa-footer-content.desktop-footer {
         max-width: 100vw;
@@ -333,10 +336,10 @@
         display: flex;
         width: 85vw;
         max-width: 1600px;
-        justify-content: flex-start;
-        align-items: flex-start;
-        gap: 120px;
-        margin-bottom: 32px;
+        justify-content: center;
+        align-items: center;
+        gap: 32px;
+        margin-bottom: 16px;
       }
       .footer-logo-col {
         flex: 0 0 320px;
@@ -354,8 +357,10 @@
       .footer-links-col {
         flex: 1 1 0;
         display: flex;
-        align-items: flex-start;
-        justify-content: flex-start;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0 8px;
       }
       .footer-links-list {
         list-style: none;
@@ -363,7 +368,7 @@
         margin: 0 0 0 0;
       }
       .footer-links-list li {
-        margin-bottom: 18px;
+        margin-bottom: 10px;
       }
       .footer-links-list a {
         color: #fff;
@@ -385,14 +390,15 @@
         width: 85vw;
         max-width: 1600px;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
+        gap: 24px;
         margin-top: 0;
       }
       .footer-bottom-links {
         display: flex;
         align-items: center;
-        gap: 16px;
+        gap: 10px;
         font-size: 18px;
         font-family: "PFDinTextPro-Bold", Arial, sans-serif;
       }
@@ -409,7 +415,7 @@
       .footer-bottom-social {
         display: flex;
         align-items: center;
-        gap: 12px;
+        gap: 8px;
         font-size: 16px;
         font-family: "PFDinTextPro-Bold", Arial, sans-serif;
       }
@@ -1039,7 +1045,7 @@
         We look for employees who are as collaborative as they are driven, and
         who are as passionate about the causes that matter to them as they are
         about their work. Through the
-        <strong><a href="/foundation">CAA Foundation</a></strong
+        <strong><a href="#">CAA Foundation</a></strong
         >, we give employees meaningful opportunities to give back to their
         communities.
       </p>
@@ -1091,9 +1097,9 @@
     <footer class="caa-footer">
       <div class="caa-footer-content desktop-footer">
         <div class="footer-main-row">
-          <div class="footer-logo-col">
-            <div class="caa-footer-logo">CAA</div>
-          </div>
+          <!-- <div class="footer-logo-col">
+          </div> -->
+            <div class="caa-footer-logo" style="margin-bottom: 1rem;">CAA</div>
           <div class="footer-links-col">
             <ul class="footer-links-list">
               <li><a href="#">About Us</a></li>
