--- a/sports-personalities.html
+++ b/sports-personalities.html
@@ -320,6 +320,9 @@
         font-family: "PFDinTextPro-Regular", Arial, sans-serif;
         margin-top: 0;
         border: none;
+        max-height: 70vh;
+        min-height: 200px;
+        overflow-y: auto;
       }
       .caa-footer-content.desktop-footer {
         max-width: 100vw;
@@ -333,9 +336,9 @@
         display: flex;
         width: 85vw;
         max-width: 1600px;
-        justify-content: flex-start;
-        align-items: flex-start;
-        gap: 120px;
+        justify-content: center;
+        align-items: center;
+        gap: 80px;
         margin-bottom: 32px;
       }
       .footer-logo-col {
@@ -354,8 +357,9 @@
       .footer-links-col {
         flex: 1 1 0;
         display: flex;
-        align-items: flex-start;
-        justify-content: flex-start;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
       }
       .footer-links-list {
         list-style: none;
