--- a/sports-personalities.html
+++ b/sports-personalities.html
@@ -28,7 +28,7 @@
       }
 
       .hero-bg {
-        background: url("sports.jpg") center center/cover no-repeat;
+        background: url("neymar.jpg") center center/cover no-repeat;
         position: absolute;
         top: 0;
         left: 0;
